Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29889

mysqldump --tab --header is slow

    XMLWordPrintable

Details

    Description

      mysqldump --header --tab wraps the dumping SELECT in UNION ALL + ORDER BY. Which means a filesort (try EXPLAIN), that would make mysqldump notably slower on large tables. This is completely unnecessary, because the ordering of table rows is unimportant.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.